--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,23 @@
     <script src="js/init.js"></script>
   </head>
   <body ng-app="fileUpload">
-    <h1>Secure File Storage 1.0</h1>
+    <nav class="white pos_fix" role="navigation">
+      <div class="nav-wrapper container font_prompt"><a class="brand-logo hide_500" id="logo-container" href="index.html">DaBest Secure File Storage</a>
+        <ul class="right hide-on-med-and-down">
+          <li><a href="#"><i class="material-icons right">exit_to_app</i>เข้าสู่ระบบ</a></li>
+        </ul>
+        <ul class="side-nav" id="nav-mobile">
+          <li>&nbsp;</li>
+          <li class="grey lighten-5"><a href="#"><i class="material-icons left">home</i>
+              <div class="font_1dot4">หน้าแรก</div></a></li>
+          <li class="grey lighten-5"><a href="#"><i class="material-icons left">exit_to_app</i>
+              <div class="font_1dot4">เข้าสู่ระบบ</div></a></li>
+        </ul><a class="button-collapse" href="#" data-activates="nav-mobile"><i class="material-icons">menu</i></a>
+      </div>
+    </nav>
+    <nav class="white" role="navigation">
+      <div class="nav-wrapper container"></div>
+    </nav><br>
     <form ng-controller="MyCtrl as up" name="up.upload_form">Single Image with validations
       <input type="file" ngf-select="" ng-model="up.file" name="file" ngf-pattern="'image/*'" accept="image/*" ngf-max-size="20MB">            Image thumbnail:<img style="width:100px;" ng-show="!!up.file" ngf-thumbnail="up.file || '/thumb.jpg'"><i ng-show="up.upload_form.file.$error.required">*required</i><br><i ng-show="up.upload_form.file.$error.maxSize">
         File too large
