Typo Fix & Use Bower instead of NPM for CryptoJS package on Client-side

--- a/client/index.html
+++ b/client/index.html
@@ -48,5 +48,6 @@
   <script type="text/javascript" src="node_modules/angular/angular.min.js"></script>
   <script type="text/javascript" src="node_modules/ng-file-upload/dist/ng-file-upload.min.js"></script>
   <script type="text/javascript" src="node_modules/ng-file-upload/dist/ng-file-upload-shim.min.js"></script>
+  <script type="text/javascript" src="bower_components/crypto-js/crypto-js.js"></script>
   <script type="text/javascript" src="main.js"></script>
 </html>
