--- a/client/index.html
+++ b/client/index.html
@@ -35,7 +35,7 @@
     </nav>
     <nav class="white" role="navigation">
       <div class="nav-wrapper container"></div>
-    </nav><br>
+    </nav>
     <div class="parallax-container" id="index-banner">
       <div class="section no-pad-bot">
         <div class="container"><br><br>
