--- a/client/index.html
+++ b/client/index.html
@@ -57,7 +57,7 @@
             <h3><i class="mdi-content-send brown-text"></i></h3>
             <h4>Upload File</h4>
             <form ng-controller="MyCtrl as up" name="up.upload_form">Single Image with validations
-              <input type="file" ngf-select="" ng-model="up.file" name="file" ngf-pattern="'image/*'" accept="image/*" ngf-max-size="20MB">            Image thumbnail:<img style="width:100px;" ng-show="!!up.file" ngf-thumbnail="up.file || '/thumb.jpg'"><i ng-show="up.upload_form.file.$error.required">*required</i><br><i ng-show="up.upload_form.file.$error.maxSize">
+              <input type="file" ngf-select="" ng-model="up.file" name="file" ngf-pattern="'*'" accept="*" ngf-max-size="20MB">            Image thumbnail:<img style="width:100px;" ng-show="!!up.file" ngf-thumbnail="up.file || '/thumb.jpg'"><i ng-show="up.upload_form.file.$error.required">*required</i><br><i ng-show="up.upload_form.file.$error.maxSize">
                 File too large
                 {{up.file.size / 1000000|number:1}}MB: max 20M</i>
               <!--
